Cleaned up Steam / Epic streamer.
Cleaned up image downloader.