@@ -1,7 +1,7 @@
 package com.Chahin.GameSnag.Utils;
 
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -10,7 +10,7 @@ import java.nio.file.StandardCopyOption;
 public class ImageDownloader {
     public static String downloadImage(String imageUrl, String fileName) {
 
-        try (InputStream in = new URL(imageUrl).openStream()) {
+        try (InputStream in = new URI(imageUrl).toURL().openStream()) {
             Path folder = Paths.get("./images/games");
             if (!Files.exists(folder)) {
                 Files.createDirectories(folder);
